--- a/css/style.css
+++ b/css/style.css
@@ -8,18 +8,18 @@
 
 /* NavBar */
 
-.navbar{
+.navbar {
     background-color: #ab8f78 !important;
     font-family: 'Poppins';
 
 }
 
-li{
+li {
     margin: 8px;
     padding: 5px;
 }
 
-a:hover{
+a:hover {
     background-color: #947a65;
     color: black;
     font-weight: bolder;
@@ -27,35 +27,35 @@ a:hover{
     text-decoration: none;
 }
 
-a:link{ 
-    background-color: #ab8f78 ;
+a:link {
+    background-color: #ab8f78;
     color: black;
 }
 
 a:active {
     background-color: #ab8f78;
-    color: black ;
+    color: black;
 }
 
 /* Main */
 
-.main{
- background-color: #fefae0;
+.main {
+    background-color: #fefae0;
 
 }
 
 
-.img-main{
+.img-main {
     max-width: 100%;
     padding: 20px;
     margin: auto;
 }
 
-.div-h2-main{
+.div-h2-main {
     text-align: center;
     font-family: 'Poppins';
     margin: auto;
-    color: #020202 ;
+    color: #020202;
     padding: 2rem;
 }
 
@@ -63,7 +63,7 @@ a:active {
 /* Paises */
 
 
-.section-paises{
+.section-paises {
     display: flex;
     max-width: 80%;
     margin: auto;
@@ -71,15 +71,15 @@ a:active {
     text-align: center;
     font-family: 'Poppins';
     font-size: 20px;
-    
+
 }
 
-.img-paises{
-  max-width: 100%;
+.img-paises {
+    max-width: 100%;
     margin: auto;
 }
 
-p{
+p {
     padding: 2%;
 }
 
@@ -88,29 +88,54 @@ p{
 
 
 .carousel {
- 
+
     padding: 2rem;
-  }
-  
-  .h1-galeria{
+}
+
+.h1-galeria {
     font-family: 'Poppins';
     font-size: medium;
     text-align: center;
-   margin-top: 2rem;
-    
+    margin-top: 2rem;
+
 }
-  
-  .h2-galeria{
-      font-family: 'Poppins';
-      font-size: medium;
-      text-align: center;
-      background-color: #cecace;
-      
-  }
-  
-  
+
+.h2-galeria {
+    font-family: 'Poppins';
+    font-size: medium;
+    text-align: center;
+    background-color: #cecace;
+
+}
+
+/* Newsletter */
+
+.main-news {
+    background-image: url("https://kinsta.com/es/wp-content/uploads/sites/8/2019/01/como-empezar-un-blog-de-viajes.png");
+    background-repeat: no-repeat;
 
 
+}
+
+
+.h1-contacto {
+    text-align: center;
+    font-family: 'Poppins';
+    font-size: medium;
+    margin: 20px;
+}
+
+.contacto {
+    margin: 20px;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.formulario{
+    margin: 20px;
+}
 /* Footer */
 
 .footer p {
@@ -121,7 +146,7 @@ p{
 
 
 .redes-icono {
-  height: 40px;
+    height: 40px;
     padding: 10px;
 
 }
@@ -140,4 +165,3 @@ p{
 .footer div {
     display: flex;
 }
-
