--- a/css/style.css
+++ b/css/style.css
@@ -133,9 +133,10 @@ p {
     align-items: center;
 }
 
-.formulario{
+.formulario {
     margin: 20px;
 }
+
 /* Footer */
 
 .footer p {
@@ -166,4 +167,40 @@ p {
     display: flex;
 }
 
+@media (max-width:500px) {
 
+
+    .img-main {
+        max-width: 70%;
+        margin: auto;
+    }
+
+    .footer p {
+        font-family: 'Poppins', sans-serif;
+        font-size: 20px;
+    }
+
+
+    .redes-icono {
+        max-width: 50px;
+        padding: 10px;
+
+    }
+
+    .footer {
+        background-color: bisque;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+    }
+
+    .footer div {
+        display: flex;
+    }
+
+    .img-paises {
+        max-width: 100%;
+        margin: auto !important;
+    }
+    }
